citiesapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citiesapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      module: citiesapi
  template:
    metadata:
      labels:
        module: citiesapi
    spec:
      containers:
        - name: citiesapi
          image: idacsmodule.azurecr.io/cities-api
          imagePullPolicy: "Always"
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "150Mi"
              cpu: "200m"
      imagePullSecrets:
        - name: kubsecret
