idacsorg-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: idacsorg-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      module: cities
      app: idacsorg
  template:
    metadata:
      labels:
        module: cities
        app: idacsorg
    spec:
      volumes:
        - name: org-assets-volume
          persistentVolumeClaim:
            claimName: org-assets-pvc
      containers:
        - name: idacsorg
          image: idacsmodule.azurecr.io/idacsorg:cloud
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/usr/share/nginx/html/assets"
              name: org-assets-volume
      imagePullSecrets:
        - name: kubsecret
