citiesapi-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: citiesapi-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  selector:
    module: idacsorg-api
    # module: citiesapi
